# picard-plugin-shelves

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: create-pr-to-picard-plugins.yml  submit-to-plugins-repo.yml
.run/: Unittests in tests.run.xml
docs/: README.md
scripts/: rename_methods.py  trace_shelves.py
shelves/: __init__.py  actions.py  commands.py  constants.py  context.py  contexts.py  dialogs.py  exceptions.py  exeptions.py  manager.py  options.py  options_management.py  options_workflow.py  processors.py  runtime.py  script_functions.py  settings.py  shelves.ui  shelves_config.ui  transitions.py  typings.py  ui_shelves_config.py  utils.py  widgets.py  workflow.py
shelves/options/: __init__.py  constants.py  management.py  page.py  releasetype.py  workflow.py
shelves/ui/: actions.ui  dialogs.py  options.py  options.ui  reduceddroplist.py  shelves.ui  widgets.py
tests/: __init__.py  test_actions.py  test_manager.py  test_options.py  test_processors.py  test_processors_priority.py  test_processors_workflow.py  test_script_functions.py  test_transitions.py  test_utils.py
