[project]
name = "picard-plugin-shelves"
version = "1.7.0"
readme = "README.md"
description = "A MusicBrainz Picard plugin to organize your music into shelves."
keywords = ["musicbrainz", "picard", "plugin", "shelves", "music", "organization"]
license-files = ["LISENCE"]
authors = [
    { name = "nrth3rnlb" }
]
requires-python = ">=3.14"
dependencies = [
    "picard==2.13.*",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "commitizen>=4.13.10",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.6.0",
    "pyqt5==5.15.*",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
version_files = [
    "shelves/__init__.py"
]
