[project]
name = "picard-plugin-shelves"
version = "2.0.0"
readme = "README.md"
description = "A MusicBrainz Picard plugin to organize your music into shelves."
keywords = ["musicbrainz", "picard", "plugin", "shelves", "music", "organization"]
license-files = ["LICENSE"]
authors = [
    { name = "nrth3rnlb" }
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "picard>=2.13",
    "pytest-cov>=7.1",
    "pytest-mock>=3.15",
    "ruff>=0.15",
    "pyqt5>=5.15",
    "black>=25.11.0",
    "pre-commit>=4.3.0",
]
